# twidge

./: COPYRIGHT  Commands.hs  Config.hs  DB.hs  Download.hs  DownloadQueue.hs  FeedParser.hs  INSTALL  MailParser.hs  Main.hs  Makefile  OAuth.hs  README.md  Setup.lhs  TODO  TwidgeHttpClient.hs  Types.hs  Utils.hs  hpodder.cabal  hpodder.hs  hprfaq070204.odt  hspod.cabal  hspod.hs  index.html  twarsh.cabal  twidge-sh  twidge.bash_completion  twidge.cabal  twidge.hs
Commands/: Add.hs  Auth.hs  Catchup.hs  Download.hs  EnableDisable.hs  Follow.hs  FollowBlock.hs  ImportIpodder.hs  Ls.hs  Rm.hs  SetStatus.hs  SetTitle.hs  Setup.hs  Update.hs
DTD/: Rss2.hs  rss2.dtd
Text/ParserCombinators/: HuttonMeijerWallace.hs
Text/XML/: HaXml.hs
Text/XML/HaXml/: Escape.hs  Haskell2Xml.hs  Lex.hs  Parse.hs  Pretty.hs  Types.hs  Validate.hs  Wrappers.hs  Xml2Haskell.hs
Text/XML/HaXml/DtdToHaskell/: Convert.hs  Instance.hs  TypeDef.hs
Text/XML/HaXml/Html/: Generate.hs  Parse.hs  Pretty.hs
Text/XML/HaXml/Xtract/: Combinators.hs  Lex.hs  Parse.hs
debian/: README.Debian  changelog  control  copyright  cron.d.ex  dirs  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  hpodder-default.ex  hpodder.doc-base.EX  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
doc/: SConstruct  hpodder-manpage.sgml  hpodder.1  hpodder.sgml  jadetex.cfg  local.dsl  man.hpodder.sgml  man.twidge.sgml  printlocal.dsl  twidge-manpage.sgml  twidge.sgml
doc/sgml-common/: ps2epsi
sgml-common/: COPYING  COPYRIGHT  ChangeLog  Makefile.common  SConstruct
twidge-html/: index.html  r1.html  twidge.html
