Name: hpodder
Version: 0.5.0
License: GPL
Maintainer: John Goerzen <jgoerzen@complete.org>
Stability: Alpha
Copyright: Copyright (c) 2006 John Goerzen
Build-Depends: haskell98, network, unix, parsec, MissingH>=0.14.5,
 HDBC>=0.99.2, HDBC-sqlite3>=0.99.2, mtl, base

Executable: hpodder
Main-Is: hpodder.hs
GHC-Options: -O2
Extensions: ExistentialQuantification, OverlappingInstances,
    UndecidableInstances
