Name: twidge
Version: 0.1.0
License: GPL
Maintainer: John Goerzen <jgoerzen@complete.org>
Author: John Goerzen
Stability: Stable
Copyright: Copyright (c) 2006-2008 John Goerzen
license-file: COPYRIGHT
extra-source-files: COPYING, INSTALL, doc/SConstruct,
  doc/twidge-manpage.sgml, doc/twidge.sgml, doc/local.dsl,
  doc/man.twidge.sgml, doc/printlocal.dsl, doc/sgml-common/COPYING,
  doc/sgml-common/COPYRIGHT, doc/sgml-common/ChangeLog,
  doc/sgml-common/Makefile.common, doc/sgml-common/SConstruct,
  doc/sgml-common/ps2epsi
homepage: http://software.complete.org/twidge
Build-type: Simple
Category: Network
Synopsis: FIXME
Description:  FIXME
 FIXME
Build-Depends: haskell98, network, unix, parsec, MissingH>=1.0.0,
 mtl, base, HaXml>=1.13.2, HaXml<1.19, hslogger,
 ConfigFile, old-time, directory, process, HSH

Executable: twidge
Main-Is: twidge.hs
Other-Modules: Commands, Config, Download, FeedParser,
        Types, Utils, 
        Commands.Ls
GHC-Options: -O2
Extensions: ExistentialQuantification, OverlappingInstances,
    UndecidableInstances
