Name: twidge
Version: 1.1.0
License: GPL
Maintainer: John Goerzen <jgoerzen@complete.org>
Author: John Goerzen
Stability: Stable
Copyright: Copyright (c) 2006-2013 John Goerzen
license-file: COPYRIGHT
extra-source-files: COPYING, INSTALL, doc/SConstruct,
  doc/twidge-manpage.sgml, doc/twidge.sgml, doc/local.dsl,
  doc/man.twidge.sgml, doc/printlocal.dsl, doc/sgml-common/COPYING,
  doc/sgml-common/COPYRIGHT, doc/sgml-common/ChangeLog,
  doc/sgml-common/Makefile.common, doc/sgml-common/SConstruct,
  doc/sgml-common/ps2epsi, Makefile,
  twidge.bash_completion
homepage: http://software.complete.org/twidge
Build-type: Simple
Category: Network
Synopsis: Unix Command-Line Twitter and Identica Client
Description: twidge is a client for microblogging sites such as Twitter and
 Identica (identi.ca). Microblogging sites let you post short
 one-paragraph updates, follow the updates that your friends post, and
 interact with everyone in the site in a conversation style.
 .
 twidge is a client to make working with microblogging sites faster
 and easier. It is extremely versatile, and can be customized to work
 the way you want to work, and combined with other tools to do just
 about anything.
 .
 twidge can be used quite nicely interactively from the shell. It is
 useful directly as-is, and with simple shell aliases can make a
 highly efficient system to do exactly what you want. It is perfectly
 capable of being your only client for microblogging.
 .
 twidge also can be used in an automated way, via cron(1), or it can
 even integrate with your email system.
 .
 A full list of twidge features, along with numerous suggestions on
 how to use it, can be found at the twidge website at
 http://software.complete.org/twidge.

Cabal-Version: >=1.2.3

Flag withBitly
  description: Enable bit.ly and j.mp shorteners (requires Bitly module)
  default: False


Executable twidge
  Build-Depends: network, unix, parsec, MissingH>=1.0.0,
   mtl, base >= 4 && < 5, hslogger, hoauth>=0.3.4 && <0.4,
   ConfigFile, directory, HSH, regex-posix, utf8-string, binary,
   bytestring, curl, old-locale, time, aeson>=0.6.1.0 && <0.7,
   text>=0.11.2.0 && <0.12

  if flag(withBitly)
    Build-Depends: Bitly
    CPP-OPTIONS: -DUSE_BITLY

  Main-Is: twidge.hs
  Other-Modules: Commands, Commands.FollowBlock, Commands.Ls,
        Commands.Setup, Commands.Update, Config, Download,
        MailParser, Types, Utils, OAuth
  GHC-Options: -O2
  Extensions: ExistentialQuantification, OverlappingInstances,
    UndecidableInstances
